--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,14 @@ excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Andres Chico\\Downloads\\Programacion\\lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Andres Chico\\Downloads\\mariadb-java-client-3.0.11.jar
 file.reference.mariadb-java-client-3.0.11.jar-1=C:\\Users\\Andres Chico\\Downloads\\Programacion\\mariadb-java-client-3.0.11.jar
+file.reference.mariadb-java-client-3.0.11.jar-2=C:\\Users\\Raven\\Desktop\\Guia 5\\Driver\\mariadb-java-client-3.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
     ${file.reference.mariadb-java-client-3.0.11.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mariadb-java-client-3.0.11.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
