--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,13 +37,15 @@ file.reference.jcalendar-1.4.jar=../../../../Andres Chico/Downloads/Programacion
 file.reference.mariadb-java-client-3.0.11.jar=../../../../Andres Chico/Downloads/mariadb-java-client-3.0.11.jar
 file.reference.mariadb-java-client-3.0.11.jar-1=../../../../Andres Chico/Downloads/Programacion/mariadb-java-client-3.0.11.jar
 file.reference.mariadb-java-client-3.0.11.jar-2=../../../Desktop/Guia 5/Driver/mariadb-java-client-3.0.11.jar
+file.reference.mariadb-java-client-3.0.11.jar-3=C:\\Users\\Andres Chico\\Downloads\\Programacion\\mariadb-java-client-3.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
     ${file.reference.mariadb-java-client-3.0.11.jar-1}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mariadb-java-client-3.0.11.jar-2}
+    ${file.reference.mariadb-java-client-3.0.11.jar-2}:\
+    ${file.reference.mariadb-java-client-3.0.11.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
