--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,4 +2,5 @@ compile.on.save=true
 file.reference.jcalendar-1.4.jar=C:\\Users\\Raven\\Desktop\\Guia 5\\Driver\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Raven\\Desktop\\Guia 5\\Driver\\mariadb-java-client-3.0.11.jar
 file.reference.mariadb-java-client-3.0.11.jar-1=C:\\Users\\Raven\\Desktop\\Guia 5\\Driver\\mariadb-java-client-3.0.11.jar
-user.properties.file=C:\\Users\\Andres Chico\\AppData\\Roaming\\NetBeans\\17\\build.properties
+file.reference.mariadb-java-client-3.0.11.jar-3=C:\\Users\\Raven\\Desktop\\Guia 5\\Driver\\mariadb-java-client-3.0.11.jar
+user.properties.file=C:\\Users\\Raven\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
