--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,19 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/UniversidadEjemplo
 excludes=
-file.reference.jcalendar-1.4.jar=../../../../Andres Chico/Downloads/Programacion/lib/jcalendar-1.4.jar
-file.reference.mariadb-java-client-3.0.11.jar=../../../../Andres Chico/Downloads/mariadb-java-client-3.0.11.jar
-file.reference.mariadb-java-client-3.0.11.jar-1=../../../../Andres Chico/Downloads/Programacion/mariadb-java-client-3.0.11.jar
-file.reference.mariadb-java-client-3.0.11.jar-2=../../../Desktop/Guia 5/Driver/mariadb-java-client-3.0.11.jar
-file.reference.mariadb-java-client-3.0.11.jar-3=C:\\Users\\Andres Chico\\Downloads\\Programacion\\mariadb-java-client-3.0.11.jar
+file.reference.jcalendar-1.4.jar=Librerias\\jcalendar-1.4.jar
+file.reference.mariadb-java-client-3.0.11.jar=Librerias\\mariadb-java-client-3.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-3.0.11.jar}:\
-    ${file.reference.mariadb-java-client-3.0.11.jar-1}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mariadb-java-client-3.0.11.jar-2}:\
-    ${file.reference.mariadb-java-client-3.0.11.jar-3}
+    ${file.reference.mariadb-java-client-3.0.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
