--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -77,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=UniversidadEjemplo
-main.class=universidadejemplo.Vistas.UniversidadULP
+main.class=universidadejemplo.UniversidadEjemplo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
