--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /nbproject/private/
+build/classes/universidadejemplo/Vistas/Inscripciones$1.class
+build/classes/universidadejemplo/Vistas/Inscripciones$2.class
+build/classes/universidadejemplo/Vistas/Inscripciones$3.class
