--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 build/classes/universidadejemplo/Vistas/Inscripciones$1.class
 build/classes/universidadejemplo/Vistas/Inscripciones$2.class
 build/classes/universidadejemplo/Vistas/Inscripciones$3.class
+nbproject/private/private.xml
