--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ build/classes/universidadejemplo/Vistas/Inscripciones$1.class
 build/classes/universidadejemplo/Vistas/Inscripciones$2.class
 build/classes/universidadejemplo/Vistas/Inscripciones$3.class
 nbproject/private/private.xml
+/build/
